--- a/app/src/main/res/layout/activity_add_profile.xml
+++ b/app/src/main/res/layout/activity_add_profile.xml
@@ -3,23 +3,46 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+   <TextView
+       android:id="@+id/titleAddProfile"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_alignParentTop="true"
+       android:layout_centerHorizontal="true"
+       android:layout_margin="10dp"
+       android:fontFamily="Asap-Regular"
+       android:layout_marginTop="43dp"
+       android:textColor="#06bebd"
+       android:textSize="44sp"
+       android:textAlignment="center"
+       android:text="Add a Profile" />
 
- <Button
-     android:layout_width="match_parent"
-     android:layout_height="wrap_content"
-     android:id="@+id/addprofile"
-     android:text="@string/addprofile"
-     android:gravity="center"
-     />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_marginBottom="5dp">
 
-  <ListView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/Profiles"
-      >
+        <Button
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:id="@+id/addprofile"
+           android:text="+"
+           android:gravity="center"
+           android:textSize="42sp"
+           android:textColor="#ffffff"
+           android:textAllCaps="false"
+           android:background="@drawable/roundedbtn"
+           />
 
-  </ListView>
+    </LinearLayout>
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/Profiles"
+        >
 
+    </ListView>
 
-</LinearLayout>
+  </LinearLayout>
